Se modifico el swagger agregando type of procedures. Se termino el mismo controlador, queda pendiente details type of procedures
